+ added hiding of all tooltips and popovers on "mouseup" (except on popovers themselves) + added forgotten visibility check and rendering in addOcuupiedMarkup() # refactored templates # corrected index in addColumn() in timeline model # cleaned up timeline render() a bit, aggregating specific rendering calls + added renderTimeline() to renderSimulator()

--- a/autorensystem/js/simulator/view/popover.css
+++ b/autorensystem/js/simulator/view/popover.css
@@ -85,6 +85,6 @@ div.popover-context-info div.btn {
 
 
 
-div#popoverContentTemplate {
+.simulator-component-template {
     display: none;
 }
